# cabal2snack

./: LICENSE  cabal2snack.cabal  default.nix  snack.nix
cabal2snack/: Main.hs
src/: Cabal2Snack.hs
src/Cabal2Snack/: Options.hs
src/Snack/: PackageSpec.hs
